fixed spacing on drop downs labels to not overlap down caret

--- a/ooiui/static/css/common/plotting.css
+++ b/ooiui/static/css/common/plotting.css
@@ -71,6 +71,8 @@ ul.dropdown-menu.inner.selectpicker > li > a:focus {
 
 span.filter-option.pull-left {
 	text-transform: capitalize;
+  margin-left: -9px;
+  padding-bottom: 5px;
 }
 
 /* Plotting sidebar buttons */
